# RustACoupler

./: .gitignore  Cargo.toml  Makefile  README.md  a.plot  rustfmt.toml  upsample.waqv
src/: args.rs  ascii.rs  binary.rs  bytes.rs  config.rs  devices.rs  error.rs  hamming.rs  lib.rs  main.rs  receiver.rs  recorder.rs  save.rs  sinwav.rs  speaker.rs  synthesizer.rs  transmitter.rs  utils.rs
src/datalink/: enums.rs  frame.rs  mod.rs
src/modem/: demodulator.rs  filter.rs  mod.rs  modulator.rs  protocol.rs
src/physical/: frame.rs
