[package]
name = "rust_a_coupler"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
cpal = "0.14.1"
criterion-plot = "0.5.0"
dft = "0.5.5"
fast-float = "0.2.0"
feos-dft = "0.3.2"
hound = "3.5.0"
itertools = "0.10.3"
itertools-num = "0.1.3"
nalgebra = "0.31.1"
num = "0.4.0"
plotters = "0.3.4"
portaudio = "*"
ringbuf = "0.3.1"
rustfft = "6.1.0"
secded = { version = "1.1.0", features = ["dyn"] }

[profile.dev]
opt-level = 0
overflow-checks = false # Disable integer overflow checks.

[profile.release-lto]
inherits = "release"
lto = true
