[package]
name = "popemodem"
version = "0.1.0"
edition = "2021"

[dependencies]
biquad = "0.4.2"
byteorder = "1.4.3"
cpal = "0.14.1"
dft = "0.5.5"
hound = "3.5.0"
itertools = "0.10.3"
itertools-num = "0.1.3"
nalgebra = "0.31.1"
num = "0.4.0"
ringbuf = "0.3.1"
rustfft = "6.1.0"
secded = { version = "1.1.0", features = ["dyn"] }
tokio = { version = "1.22.0", features = ["full"] }

[profile.dev]
opt-level = 0
overflow-checks = false # Disable integer overflow checks.

[profile.release-lto]
inherits = "release"
lto = true
