[package]
name = "popemodem"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.59"
biquad = "0.4.2"
byteorder = "1.4.3"
clap = { version = "4.0.29", features = ["derive"] }
cpal = { version = "0.14.1", features = ["asio"] }
crc = "3.0.0"
# dft = "0.5.5"
futures = "0.3.25"
hound = "3.5.0"
itertools = "0.10.3"
itertools-num = "0.1.3"
nalgebra = "0.31.1"
num = "0.4.0"
plotters = "0.3.4"
rand = "0.8.5"
ringbuf = "0.3.1"
rustfft = "6.1.0"
thiserror = "1.0.37"
# tokio = { version = "1.22.0", features = ["full"] }

[profile.dev]
opt-level = 0
# overflow-checks = false # Disable integer overflow checks.

[profile.release-lto]
inherits = "release"
lto = true

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Ctarget-cpu=native link-arg=-fuse-ld=mold -D warnings"]

[target.x86_64-apple-darwin]
rustflags = ["-Ctarget-cpu=native -D warnings"]
